2011-08-22  SAncho Lerena <slerena@ærtica.es>

	* pandora_console.spec: Updated spec for being used in Suse build
	service.

2011-08-19  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Added recon script SNMP by default.

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh: Updated version (4.0RC1)

	* operation/agentes/graphs.php: By default will show only AVG graphs.

	* config_process.php: Updated version.

	* pandora_console.spec, 
	pandora_console.redhat.spec: Updated specs for 4.0RC1 release.

2011-08-19  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Fixed problem with timezone on page load
	in setup.

2011-08-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php: in function "graphic_agentaccess" fixed when
	the graph is empty, now show the standar Pandora image "no data to show".
	
	Fixes: #3393224

2011-08-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/menu.css, operation/menu.php, images/plotchart.png: move
	to the upper level the Networkmap Console, and added image icon.

2011-08-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/manage_recontask_form.php: add more explanation in the
	scripts when select script.
	
	Fixes: #3393861

2011-08-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fixed event graph by user
	into event statistics

2011-08-19  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/net_tools.php: fixed the try to execute any commands in the
	extensions.
	
	Fixes: #3393861

2011-08-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php: Fixed a bug which hide extension icons.
	Fixes: 3393214

2011-08-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/ver_agente.php: Added feature to show vmware manager
	extension tab only when the agent is a virtual machine.

2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_network.php: disabled snmp community